# gridsim-rs

./: .gitignore  Cargo.toml  notes.md
crates/bin2/: Cargo.toml
crates/bin2/src/: main.rs
crates/grid/: Cargo.toml
crates/grid/src/: grid3.rs  grid4.rs  lib.rs
src/: grid.rs  grid2.rs  main.rs
