[package]
name = "gridsim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/bin",
    "crates/bin2",
    "crates/grid",
    "crates/interface"
]

[profile.release]
debug = 1
debuginfo-level = 1
